# lakefs-glue-federation

./: .gitignore  NOTICE  README.md  cleanup.py  lakefs_glue_federation.py  pyproject.toml
.github/workflows/: release.yml
